# solve2048

./: Cargo.toml  README.md  index.html
benches/: monte_carlo.rs
src/: board.rs  expectimax.rs  heuristic.rs  huggingface.rs  lib.rs  monte_carlo.rs  ntuple.rs  player.rs
www/: Makefile  README.md  animframe_polyfill.js  bind_polyfill.js  bootstrap.js  classlist_polyfill.js  game_manager.js  grid.js  html_actuator.js  index.html  index.js  keyboard_input_manager.js  local_storage_manager.js  network.js  package-lock.json  package.json  rollup.config.mjs  tile.js  webpack.config.js
www/output/: index.js  solve2048_bg.wasm
www/style/: main.css  progress.css  slider.css  spinner.css
